# deribit-history-client

./: .buildinfo  CHANGELOG.md  README.md  api.html  docker-compose.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: ci.yaml
docs/source/: api.rst  conf.py  index.rst
scripts/: generate_schemas.py
src/deribit_history_client/: client.py  read.py
src/deribit_history_client/schemas/: get_instrument.json  get_instruments.json  get_trades_by_sequence.json
tests/: config.py  conftest.py  test_client.py
tests/integration/: test_api_check_live.py
